# TomatoVision3D

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml
configs/: fiftyone_viewer.yaml  predict_yolo_exp1.yaml  predict_yolo_exp2.yaml  predict_yolo_exp3.yaml  sensor_config.yaml  train_yolo_exp1.yaml  train_yolo_exp2.yaml  train_yolo_exp3.yaml  train_yolo_tune.yaml  video_mask_pipeline.yaml  video_masksegment_pipeline.yaml  yolo.yaml
data/tomato_data/tomato_video/exp_res_1024x576/: meta.json  trajectory.json
data/tomato_data/tomato_video/smartfarm_251114/: meta.json  trajectory.json
notebook/: concept_check.ipynb  tomatovisision_pipeline_test.ipynb  yolo_fastsam_demo.ipynb
scripts/: 3d_visualizer.py  download_dataset.py  fiftyone_viewer.py  laboro_tomato_down_setting.py  predict_yolo.py  rosbag_preprocess.py  train_yolo.py  video_mask_pipeline.py  video_mask_segmenter_demo.py  viewer.py  yolo.py
src/model/: BiRefNet_segmenter.py  predict_yolo.py  train_yolo.py  video_mask_segmenter.py
src/preprocess/: preprocess_pipeline.py
src/preprocess/sensor_module/: __init__.py
src/viewer/: bbox_3d_visualizer.py  rerun_blueprint.py  viewer_pipeline.py
